cmake_minimum_required(VERSION 2.8)

PROJECT (LIBPACKFILE)
ADD_DEFINITIONS(-g)
SET(LIBPACKFILE_SRC packfile.cpp)
ADD_LIBRARY(packfile STATIC ${LIBPACKFILE_SRC})

#ADD_LIBRARY(packfile_static STATIC ${LIBPACKFILE_SRC})
#SET_TARGET_PROPERTIES(packfile_static PROPERTIES OUTPUT_NAME "packfile")
#SET_TARGET_PROPERTIES(packfile PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(packfile_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET(PACKTOOL_SRC packtool.cpp)
LINK_DIRECTORIES(${LIBPACKFILE_BINARY_DIR})
ADD_EXECUTABLE(packtool ${PACKTOOL_SRC})
#ADD_DEPENDENCIES(packtool libpackfile.a)
TARGET_LINK_LIBRARIES(packtool libpackfile.a)

